[refac] make LocationsResponse unmodifiable